--- a/api/api.yaml
+++ b/api/api.yaml
@@ -3570,7 +3570,7 @@ paths:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
       x-codegen-request-body-name: eventTopicRoute
     get:
-      summary: List notification event-topic routes with optional filtering for topic ID and event type.
+      summary: List notification event-topic routes
       operationId: listEventTopicRoutes
       tags: ["Notification"]
       parameters:
@@ -3649,7 +3649,7 @@ paths:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /projects/{projectIdOrName}/notifications/topic-target-routes:
     post:
-      summary: Create a notification topic-target route that maps notification topics to targets for delivery.
+      summary: Create a notification topic-target route 
       operationId: createTopicTargetRoute
       tags: ["Notification"]
       parameters:
@@ -3711,6 +3711,18 @@ paths:
           in: path
           required: true
           description: The Ampersand project ID or project name.
+          schema:
+            type: string
+        - name: topicId
+          in: query
+          required: false
+          description: Filter by notification topic ID.
+          schema:
+            type: string
+        - name: targetId
+          in: query
+          required: false
+          description: Filter by notification target ID.
           schema:
             type: string
       responses:
