feat: support additionalProperties logs spec

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -5053,6 +5053,7 @@ components:
           type: string
           description: The severity of the log.
           example: DEBUG
+      additionalProperties: true
     SignedUrl:
       title: Signed URL
       type: object
