feat: update logs spec to include additional properties (#235)
* feat: support additionalProperties logs spec

* feat: update logs spec

---------

Co-authored-by: Dion Low <dion@withampersand.com>

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -5098,6 +5098,7 @@ components:
                 type: string
               example:
                 "request": "GET /api/v1/users"
+          additionalProperties: true
         severity:
           type: string
           description: The severity of the log.
