feat-external/updating-spec-for-auto-joining

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -2913,8 +2913,12 @@ paths:
   /orgs/{orgId}/memberships:
     post:
       summary: Add user to an organization
+      description: Adds a builder to an organization. Two authorization modes - Org owner inviting another user, or self-joining via claimed domain 
+      (authenticated user's email domain should match the claimed domain by this organization).
       operationId: addUserToOrg
       tags: ["Org"]
+      security: # Only bearer auth works for this endpoint
+        - Bearer: []
       parameters:
         - name: orgId
           in: path
@@ -4198,9 +4202,12 @@ paths:
     get:
       operationId: checkClaimedDomain
       summary: Check if a domain is claimed
-      description: Check if a domain is claimed by an organization. Accepts email, domain, or URL.
+      description: Returns claimed domain information if authenticated user is an owner of the organization that claimed the domain, 
+      or if the user's email domain matches the claimed domain.
       tags: ["Org"]
       x-excluded: true
+      security: # Only bearer auth works for this endpoint
+        - Bearer: []
       parameters:
         - name: domain
           in: query
@@ -4243,6 +4250,8 @@ paths:
       description: Claim a domain for an organization. Accepts email, domain, or URL.
       tags: ["Org"]
       x-excluded: true
+      security: # Only bearer auth works for this endpoint
+        - Bearer: []
       requestBody:
         content:
           application/json:
