--- a/api/api.yaml
+++ b/api/api.yaml
@@ -2913,8 +2913,7 @@ paths:
   /orgs/{orgId}/memberships:
     post:
       summary: Add user to an organization
-      description: Adds a builder to an organization. Two authorization modes - Org owner inviting another user, or self-joining via claimed domain 
-      (authenticated user's email domain should match the claimed domain by this organization).
+      description: Adds a builder to an organization. Two authorization modes - Org owner inviting another user, or self-joining via claimed domain (authenticated user's email domain should be claimed by this organization).
       operationId: addUserToOrg
       tags: ["Org"]
       security: # Only bearer auth works for this endpoint
@@ -4202,8 +4201,7 @@ paths:
     get:
       operationId: checkClaimedDomain
       summary: Check if a domain is claimed
-      description: Returns claimed domain information if authenticated user is an owner of the organization that claimed the domain, 
-      or if the user's email domain matches the claimed domain.
+      description: Returns claimed domain information if authenticated user is an owner of the organization that claimed the domain, or if the user's email domain matches the claimed domain.
       tags: ["Org"]
       x-excluded: true
       security: # Only bearer auth works for this endpoint
