--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -609,7 +609,7 @@ components:
           description: The default number of records supported in a batch
           type: integer
         objectRecordLimits:
-          description: Any object-level overrides for number of records supported in a batch
+          description: Defines object-level overrides for batch record limits. Keys represent object names, and values specify the maximum number of records per batch for those objects.
           type: object
           additionalProperties:
             type: integer
