"remove topic prefix from topicId"

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -3608,7 +3608,7 @@ paths:
                 summary: Create event-topic route
                 value:
                   eventType: "installation.created"
-                  topicId: "topic_1234567890abcdef"
+                  topicId: "1234567890abcdef"
       responses:
         201:
           description: Created
