topic-destination-routes

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -3713,6 +3713,147 @@ paths:
             application/problem+json:
               schema:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
+  /projects/{projectIdOrName}/notifications/topic-destination-routes:
+    post:
+      summary: Create a notification topic-destination route
+      description: Create a new route that connects a notification topic to a destination for notification delivery.
+      operationId: createTopicDestinationRoute
+      tags: ["Notification"]
+      parameters:
+        - name: projectIdOrName
+          in: path
+          required: true
+          description: The Ampersand project ID or project name.
+          schema:
+            type: string
+          example: my-project
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - topicId
+                - destinationId
+              properties:
+                topicId:
+                  type: string
+                  description: The ID of the notification topic.
+                destinationId:
+                  type: string
+                  description: The ID of the notification destination.
+            examples:
+              route_example:
+                summary: Create topic-destination route
+                value:
+                  topicId: "1234567890abcdef"
+                  destinationId: "abcdef1234567890"
+      responses:
+        201:
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/NotificationTopicDestinationRoute"
+        400:
+          description: Bad Request
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
+        404:
+          description: Not Found
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
+        422:
+          description: Unprocessable Entity
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/InputValidationProblem"
+        default:
+          description: Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
+      x-codegen-request-body-name: topicDestinationRoute
+    get:
+      summary: List notification topic-destination routes
+      description: Retrieve all topic-to-destination routes for a project with optional filtering.
+      operationId: listTopicDestinationRoutes
+      tags: ["Notification"]
+      parameters:
+        - name: projectIdOrName
+          in: path
+          required: true
+          description: The Ampersand project ID or project name.
+          schema:
+            type: string
+        - name: topicId
+          in: query
+          required: false
+          description: Filter by notification topic ID.
+          schema:
+            type: string
+        - name: destinationId
+          in: query
+          required: false
+          description: Filter by notification destination ID.
+          schema:
+            type: string
+      responses:
+        200:
+          description: List of topic-destination routes
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/NotificationTopicDestinationRoute"
+        default:
+          description: Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
+  /projects/{projectIdOrName}/notifications/topic-destination-routes/{routeId}:
+    delete:
+      summary: Delete a notification topic-destination route
+      description: Remove the link between a topic and a destination.
+      operationId: deleteTopicDestinationRoute
+      tags: ["Notification"]
+      parameters:
+        - name: projectIdOrName
+          in: path
+          required: true
+          description: The Ampersand project ID or project name.
+          schema:
+            type: string
+        - name: routeId
+          in: path
+          required: true
+          description: The topic-destination route ID.
+          schema:
+            type: string
+      responses:
+        204:
+          description: Deleted
+        404:
+          description: Route not found
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
+        default:
+          description: Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /projects/{projectIdOrName}/notifications/topic-target-routes:
     post:
       summary: Create a notification topic-target route 
@@ -5946,6 +6087,32 @@ components:
           type: string
           format: date-time
           description: The time when the topic-target route was created.
+    NotificationTopicDestinationRoute:
+      title: Notification Topic Destination Route
+      required:
+        - id
+        - topicId
+        - destinationId
+        - projectId
+        - createTime
+      type: object
+      properties:
+        id:
+          type: string
+          description: The topic-destination route ID.
+        topicId:
+          type: string
+          description: The ID of the notification topic.
+        destinationId:
+          type: string
+          description: The ID of the notification destination.
+        projectId:
+          type: string
+          description: The Ampersand project ID.
+        createTime:
+          type: string
+          format: date-time
+          description: The time when the topic-destination route was created.
 
   securitySchemes:
     APIKeyHeader:
