--- a/api/api.yaml
+++ b/api/api.yaml
@@ -3713,10 +3713,10 @@ paths:
             application/problem+json:
               schema:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
-  /projects/{projectIdOrName}/notifications/topic-destination-routes:
+  /projects/{projectIdOrName}/topic-destination-routes:
     post:
-      summary: Create a notification topic-destination route
-      description: Create a new route that connects a notification topic to a destination for notification delivery.
+      summary: Create a topic destination route
+      description: Create a new route that connects a topic to a destination.
       operationId: createTopicDestinationRoute
       tags: ["Notification"]
       parameters:
@@ -3739,13 +3739,13 @@ paths:
               properties:
                 topicId:
                   type: string
-                  description: The ID of the notification topic.
+                  description: The ID of the topic.
                 destinationId:
                   type: string
-                  description: The ID of the notification destination.
+                  description: The ID of the destination.
             examples:
               route_example:
-                summary: Create topic-destination route
+                summary: Create topic destination route
                 value:
                   topicId: "1234567890abcdef"
                   destinationId: "abcdef1234567890"
@@ -3755,7 +3755,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/NotificationTopicDestinationRoute"
+                $ref: "#/components/schemas/TopicDestinationRoute"
         400:
           description: Bad Request
           content:
@@ -3782,7 +3782,7 @@ paths:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
       x-codegen-request-body-name: topicDestinationRoute
     get:
-      summary: List notification topic-destination routes
+      summary: List topic destination routes
       description: Retrieve all topic-to-destination routes for a project with optional filtering.
       operationId: listTopicDestinationRoutes
       tags: ["Notification"]
@@ -3796,33 +3796,33 @@ paths:
         - name: topicId
           in: query
           required: false
-          description: Filter by notification topic ID.
+          description: Filter by topic ID.
           schema:
             type: string
         - name: destinationId
           in: query
           required: false
-          description: Filter by notification destination ID.
+          description: Filter by destination ID.
           schema:
             type: string
       responses:
         200:
-          description: List of topic-destination routes
+          description: List of topic destination routes
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/NotificationTopicDestinationRoute"
+                  $ref: "#/components/schemas/TopicDestinationRoute"
         default:
           description: Error
           content:
             application/problem+json:
               schema:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
-  /projects/{projectIdOrName}/notifications/topic-destination-routes/{routeId}:
+  /projects/{projectIdOrName}/topic-destination-routes/{routeId}:
     delete:
-      summary: Delete a notification topic-destination route
+      summary: Delete a topic destination route
       description: Remove the link between a topic and a destination.
       operationId: deleteTopicDestinationRoute
       tags: ["Notification"]
@@ -3836,7 +3836,7 @@ paths:
         - name: routeId
           in: path
           required: true
-          description: The topic-destination route ID.
+          description: The topic destination route ID.
           schema:
             type: string
       responses:
@@ -6087,8 +6087,8 @@ components:
           type: string
           format: date-time
           description: The time when the topic-target route was created.
-    NotificationTopicDestinationRoute:
-      title: Notification Topic Destination Route
+    TopicDestinationRoute:
+      title: Topic Destination Route
       required:
         - id
         - topicId
@@ -6099,20 +6099,20 @@ components:
       properties:
         id:
           type: string
-          description: The topic-destination route ID.
+          description: The topic destination route ID.
         topicId:
           type: string
-          description: The ID of the notification topic.
+          description: The ID of the topic.
         destinationId:
           type: string
-          description: The ID of the notification destination.
+          description: The ID of the destination.
         projectId:
           type: string
           description: The Ampersand project ID.
         createTime:
           type: string
           format: date-time
-          description: The time when the topic-destination route was created.
+          description: The time when the topic destination route was created.
 
   securitySchemes:
     APIKeyHeader:
